packages/@aws-cdk/aws-gamelift/test/integ.game-server-group.js.snapshot/aws-gamelift-game-server-group.template.json
{
   "Resources": {
    "Vpc8378EB38": {
     "Type": "AWS::EC2::VPC",
     "Properties": {
      "CidrBlock": "10.0.0.0/16",
      "EnableDnsHostnames": true,
      "EnableDnsSupport": true,
      "InstanceTenancy": "default",
      "Tags": [
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc"
       }
      ]
     }
    },
    "VpcPublicSubnet1Subnet5C2D37C4": {
     "Type": "AWS::EC2::Subnet",
     "Properties": {
      "VpcId": {
       "Ref": "Vpc8378EB38"
      },
      "AvailabilityZone": {
       "Fn::Select": [
        0,
        {
         "Fn::GetAZs": ""
        }
       ]
      },
      "CidrBlock": "10.0.0.0/18",
      "MapPublicIpOnLaunch": true,
      "Tags": [
       {
        "Key": "aws-cdk:subnet-name",
        "Value": "Public"
       },
       {
        "Key": "aws-cdk:subnet-type",
        "Value": "Public"
       },
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc/PublicSubnet1"
       }
      ]
     }
    },
    "VpcPublicSubnet1RouteTable6C95E38E": {
     "Type": "AWS::EC2::RouteTable",
     "Properties": {
      "VpcId": {
       "Ref": "Vpc8378EB38"
      },
      "Tags": [
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc/PublicSubnet1"
       }
      ]
     }
    },
    "VpcPublicSubnet1RouteTableAssociation97140677": {
     "Type": "AWS::EC2::SubnetRouteTableAssociation",
     "Properties": {
      "RouteTableId": {
       "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
      },
      "SubnetId": {
       "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
      }
     }
    },
    "VpcPublicSubnet1DefaultRoute3DA9E72A": {
     "Type": "AWS::EC2::Route",
     "Properties": {
      "RouteTableId": {
       "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
      },
      "DestinationCidrBlock": "0.0.0.0/0",
      "GatewayId": {
       "Ref": "VpcIGWD7BA715C"
      }
     },
     "DependsOn": [
      "VpcVPCGWBF912B6E"
     ]
    },
    "VpcPublicSubnet1EIPD7E02669": {
     "Type": "AWS::EC2::EIP",
     "Properties": {
      "Domain": "vpc",
      "Tags": [
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc/PublicSubnet1"
       }
      ]
     }
    },
    "VpcPublicSubnet1NATGateway4D7517AA": {
     "Type": "AWS::EC2::NatGateway",
     "Properties": {
      "SubnetId": {
       "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
      },
      "AllocationId": {
       "Fn::GetAtt": [
        "VpcPublicSubnet1EIPD7E02669",
        "AllocationId"
       ]
      },
      "Tags": [
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc/PublicSubnet1"
       }
      ]
     },
     "DependsOn": [
      "VpcPublicSubnet1DefaultRoute3DA9E72A",
      "VpcPublicSubnet1RouteTableAssociation97140677"
     ]
    },
    "VpcPublicSubnet2Subnet691E08A3": {
     "Type": "AWS::EC2::Subnet",
     "Properties": {
      "VpcId": {
       "Ref": "Vpc8378EB38"
      },
      "AvailabilityZone": {
       "Fn::Select": [
        1,
        {
         "Fn::GetAZs": ""
        }
       ]
      },
      "CidrBlock": "10.0.64.0/18",
      "MapPublicIpOnLaunch": true,
      "Tags": [
       {
        "Key": "aws-cdk:subnet-name",
        "Value": "Public"
       },
       {
        "Key": "aws-cdk:subnet-type",
        "Value": "Public"
       },
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc/PublicSubnet2"
       }
      ]
     }
    },
    "VpcPublicSubnet2RouteTable94F7E489": {
     "Type": "AWS::EC2::RouteTable",
     "Properties": {
      "VpcId": {
       "Ref": "Vpc8378EB38"
      },
      "Tags": [
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc/PublicSubnet2"
       }
      ]
     }
    },
    "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
     "Type": "AWS::EC2::SubnetRouteTableAssociation",
     "Properties": {
      "RouteTableId": {
       "Ref": "VpcPublicSubnet2RouteTable94F7E489"
      },
      "SubnetId": {
       "Ref": "VpcPublicSubnet2Subnet691E08A3"
      }
     }
    },
    "VpcPublicSubnet2DefaultRoute97F91067": {
     "Type": "AWS::EC2::Route",
     "Properties": {
      "RouteTableId": {
       "Ref": "VpcPublicSubnet2RouteTable94F7E489"
      },
      "DestinationCidrBlock": "0.0.0.0/0",
      "GatewayId": {
       "Ref": "VpcIGWD7BA715C"
      }
     },
     "DependsOn": [
      "VpcVPCGWBF912B6E"
     ]
    },
    "VpcPublicSubnet2EIP3C605A87": {
     "Type": "AWS::EC2::EIP",
     "Properties": {
      "Domain": "vpc",
      "Tags": [
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc/PublicSubnet2"
       }
      ]
     }
    },
    "VpcPublicSubnet2NATGateway9182C01D": {
     "Type": "AWS::EC2::NatGateway",
     "Properties": {
      "SubnetId": {
       "Ref": "VpcPublicSubnet2Subnet691E08A3"
      },
      "AllocationId": {
       "Fn::GetAtt": [
        "VpcPublicSubnet2EIP3C605A87",
        "AllocationId"
       ]
      },
      "Tags": [
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc/PublicSubnet2"
       }
      ]
     },
     "DependsOn": [
      "VpcPublicSubnet2DefaultRoute97F91067",
      "VpcPublicSubnet2RouteTableAssociationDD5762D8"
     ]
    },
    "VpcPrivateSubnet1Subnet536B997A": {
     "Type": "AWS::EC2::Subnet",
     "Properties": {
      "VpcId": {
       "Ref": "Vpc8378EB38"
      },
      "AvailabilityZone": {
       "Fn::Select": [
        0,
        {
         "Fn::GetAZs": ""
        }
       ]
      },
      "CidrBlock": "10.0.128.0/18",
      "MapPublicIpOnLaunch": false,
      "Tags": [
       {
        "Key": "aws-cdk:subnet-name",
        "Value": "Private"
       },
       {
        "Key": "aws-cdk:subnet-type",
        "Value": "Private"
       },
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc/PrivateSubnet1"
       }
      ]
     }
    },
    "VpcPrivateSubnet1RouteTableB2C5B500": {
     "Type": "AWS::EC2::RouteTable",
     "Properties": {
      "VpcId": {
       "Ref": "Vpc8378EB38"
      },
      "Tags": [
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc/PrivateSubnet1"
       }
      ]
     }
    },
    "VpcPrivateSubnet1RouteTableAssociation70C59FA6": {
     "Type": "AWS::EC2::SubnetRouteTableAssociation",
     "Properties": {
      "RouteTableId": {
       "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
      },
      "SubnetId": {
       "Ref": "VpcPrivateSubnet1Subnet536B997A"
      }
     }
    },
    "VpcPrivateSubnet1DefaultRouteBE02A9ED": {
     "Type": "AWS::EC2::Route",
     "Properties": {
      "RouteTableId": {
       "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
      },
      "DestinationCidrBlock": "0.0.0.0/0",
      "NatGatewayId": {
       "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
      }
     }
    },
    "VpcPrivateSubnet2Subnet3788AAA1": {
     "Type": "AWS::EC2::Subnet",
     "Properties": {
      "VpcId": {
       "Ref": "Vpc8378EB38"
      },
      "AvailabilityZone": {
       "Fn::Select": [
        1,
        {
         "Fn::GetAZs": ""
        }
       ]
      },
      "CidrBlock": "10.0.192.0/18",
      "MapPublicIpOnLaunch": false,
      "Tags": [
       {
        "Key": "aws-cdk:subnet-name",
        "Value": "Private"
       },
       {
        "Key": "aws-cdk:subnet-type",
        "Value": "Private"
       },
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc/PrivateSubnet2"
       }
      ]
     }
    },
    "VpcPrivateSubnet2RouteTableA678073B": {
     "Type": "AWS::EC2::RouteTable",
     "Properties": {
      "VpcId": {
       "Ref": "Vpc8378EB38"
      },
      "Tags": [
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc/PrivateSubnet2"
       }
      ]
     }
    },
    "VpcPrivateSubnet2RouteTableAssociationA89CAD56": {
     "Type": "AWS::EC2::SubnetRouteTableAssociation",
     "Properties": {
      "RouteTableId": {
       "Ref": "VpcPrivateSubnet2RouteTableA678073B"
      },
      "SubnetId": {
       "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
      }
     }
    },
    "VpcPrivateSubnet2DefaultRoute060D2087": {
     "Type": "AWS::EC2::Route",
     "Properties": {
      "RouteTableId": {
       "Ref": "VpcPrivateSubnet2RouteTableA678073B"
      },
      "DestinationCidrBlock": "0.0.0.0/0",
      "NatGatewayId": {
       "Ref": "VpcPublicSubnet2NATGateway9182C01D"
      }
     }
    },
    "VpcIGWD7BA715C": {
     "Type": "AWS::EC2::InternetGateway",
     "Properties": {
      "Tags": [
       {
        "Key": "Name",
        "Value": "aws-gamelift-game-server-group/Vpc"
       }
      ]
     }
    },
    "VpcVPCGWBF912B6E": {
     "Type": "AWS::EC2::VPCGatewayAttachment",
     "Properties": {
      "VpcId": {
       "Ref": "Vpc8378EB38"
      },
      "InternetGatewayId": {
       "Ref": "VpcIGWD7BA715C"
      }
     }
    },
    "LaunchTemplate04EC5460": {
     "Type": "AWS::EC2::LaunchTemplate",
     "Properties": {
      "LaunchTemplateData": {
       "TagSpecifications": [
        {
         "ResourceType": "instance",
         "Tags": [
          {
           "Key": "Name",
           "Value": "aws-gamelift-game-server-group/LaunchTemplate"
          }
         ]
        },
        {
         "ResourceType": "volume",
         "Tags": [
          {
           "Key": "Name",
           "Value": "aws-gamelift-game-server-group/LaunchTemplate"
          }
         ]
        }
       ]
      },
      "TagSpecifications": [
       {
        "ResourceType": "launch-template",
        "Tags": [
         {
          "Key": "Name",
          "Value": "aws-gamelift-game-server-group/LaunchTemplate"
         }
        ]
       }
      ]
     }
    },
    "MyGameServerGroupServiceRoleD6701F0B": {
     "Type": "AWS::IAM::Role",
     "Properties": {
      "AssumeRolePolicyDocument": {
       "Statement": [
        {
         "Action": "sts:AssumeRole",
         "Effect": "Allow",
         "Principal": {
          "Service": [
           "autoscaling.amazonaws.com",
           "gamelift.amazonaws.com"
          ]
         }
        }
       ],
       "Version": "2012-10-17"
      },
      "ManagedPolicyArns": [
       {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":iam::aws:policy/GameLiftGameServerGroupPolicy"
         ]
        ]
       }
      ]
     }
    },
    "MyGameServerGroupA706FA3E": {
     "Type": "AWS::GameLift::GameServerGroup",
     "Properties": {
      "GameServerGroupName": "test-gameservergroup-name",
      "InstanceDefinitions": [
       {
        "InstanceType": "c5.large"
       },
       {
        "InstanceType": "c4.large"
       }
      ],
      "LaunchTemplate": {
       "LaunchTemplateId": {
        "Ref": "LaunchTemplate04EC5460"
       },
       "Version": {
        "Fn::GetAtt": [
         "LaunchTemplate04EC5460",
         "LatestVersionNumber"
        ]
       }
      },
      "RoleArn": {
       "Fn::GetAtt": [
        "MyGameServerGroupServiceRoleD6701F0B",
        "Arn"
       ]
      },
      "GameServerProtectionPolicy": "NO_PROTECTION",
      "VpcSubnets": [
       {
        "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
       },
       {
        "Ref": "VpcPublicSubnet2Subnet691E08A3"
       }
      ]
     }
    }
   },
   "Parameters": {
    "BootstrapVersion": {
     "Type": "AWS::SSM::Parameter::Value<String>",
     "Default": "/cdk-bootstrap/hnb659fds/version",
     "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
   },
   "Rules": {
    "CheckBootstrapVersion": {
     "Assertions": [
      {
       "Assert": {
        "Fn::Not": [
         {
          "Fn::Contains": [
           [
            "1",
            "2",
            "3",
            "4",
            "5"
           ],
           {
            "Ref": "BootstrapVersion"
           }
          ]
         }
        ]
       },
       "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
      }
     ]
    }
   }
  }
